Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Event_Response__c/UB_Event_Response__c.object-meta.xml
<CustomObject>
    <label>UB Event Response</label>
    <nameField>
        <label>UB Event Response Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UB Event Response</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>