Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Event_Response__c/fields/Expenditure__c.field-meta.xml
<CustomField>
    <fullName>Expenditure__c</fullName>
    <label>Expenditure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>