Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Event_Response__c/fields/Overall_Response__c.field-meta.xml
<CustomField>
    <fullName>Overall_Response__c</fullName>
    <label>Overall Response</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Exceeds Expectations</fullName>
            </value>
            <value>
                <fullName>Very Good</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>