Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Event_Response__c/fields/UB_Event__c.field-meta.xml
<CustomField>
    <fullName>UB_Event__c</fullName>
    <label>Event</label>
    <referenceTo>UB_Event__c</referenceTo>
    <relationshipLabel>UB Event Response</relationshipLabel>
    <relationshipName>UB_Event_Response</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>