Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Event_Response__c/fields/UB_No_of_People_Attended__c.field-meta.xml
<CustomField>
    <fullName>UB_No_of_People_Attended__c</fullName>
    <label>No of People Attended</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>