Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Event_Response__c/fields/UB_Revenue_Generated__c.field-meta.xml
<CustomField>
    <fullName>UB_Revenue_Generated__c</fullName>
    <label>Revenue Generated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>