Reetan.Nayak Dev 25/force-app/main/default/objects/UB_Event_Response__c/fields/UB_ROI__c.field-meta.xml
<CustomField>
    <fullName>UB_ROI__c</fullName>
    <label>ROI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>